config pac4j
