# app/controllers/VocabularyApiControllerImpInterface.java
@@ -1,6 +1,5 @@
 package controllers;
 
-import apiModels.Error;
 import apiModels.Vocabulary;
 
 import play.mvc.Http;
@@ -15,7 +14,7 @@ public interface VocabularyApiControllerImpInterface {
 
     void deleteVoc(Long vocId) throws Exception;
 
-    Vocabulary getVocById(Long vocId) throws Exception;
+    Vocabulary getVocById(Long vocId, String authorization) throws Exception;
 
     void updateVoc(Vocabulary body) throws Exception;
 
