# public/swagger.json
@@ -1,9 +1,9 @@
 {
   "swagger" : "2.0",
   "info" : {
-    "description" : "This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key `special-key` to test the authorization filters.",
+    "description" : "This is a sample server Daf-Configuration server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key `special-key` to test the authorization filters.",
     "version" : "1.0.0",
-    "title" : "Swagger Petstore",
+    "title" : "Swagger Daf Configuration",
     "termsOfService" : "http://swagger.io/terms/",
     "contact" : {
       "email" : "apiteam@swagger.io"
@@ -35,7 +35,7 @@
         "parameters" : [ {
           "in" : "body",
           "name" : "body",
-          "description" : "Pet object that needs to be added to the store",
+          "description" : "Vocabulary object that needs to be added to the store",
           "required" : true,
           "schema" : {
             "$ref" : "#/definitions/Vocabulary"
@@ -59,7 +59,7 @@
         "parameters" : [ {
           "in" : "body",
           "name" : "body",
-          "description" : "Pet object that needs to be added to the store",
+          "description" : "Vocabulary object that needs to be added to the store",
           "required" : true,
           "schema" : {
             "$ref" : "#/definitions/Vocabulary"
@@ -90,10 +90,16 @@
         "parameters" : [ {
           "name" : "vocId",
           "in" : "path",
-          "description" : "ID of pet to return",
+          "description" : "ID of vocabulary to return",
           "required" : true,
           "type" : "integer",
           "format" : "int64"
+        }, {
+          "name" : "authorization",
+          "in" : "header",
+          "description" : "token",
+          "required" : true,
+          "type" : "string"
         } ],
         "responses" : {
           "200" : {
@@ -103,22 +109,10 @@
             }
           },
           "400" : {
-            "description" : "Invalid ID supplied",
-            "schema" : {
-              "$ref" : "#/definitions/Error"
-            }
+            "description" : "Invalid ID supplied"
           },
           "404" : {
-            "description" : "Vocabulary not found",
-            "schema" : {
-              "$ref" : "#/definitions/Error"
-            }
-          },
-          "default" : {
-            "description" : "Unexpected error",
-            "schema" : {
-              "$ref" : "#/definitions/Error"
-            }
+            "description" : "Vocabulary not found"
           }
         },
         "x-accepts" : "application/json",
@@ -134,14 +128,14 @@
         "parameters" : [ {
           "name" : "vocId",
           "in" : "path",
-          "description" : "ID of pet that needs to be updated",
+          "description" : "ID of vocabulary that needs to be updated",
           "required" : true,
           "type" : "integer",
           "format" : "int64"
         }, {
           "name" : "name",
           "in" : "formData",
-          "description" : "Updated name of the pet",
+          "description" : "Updated vocabulary",
           "required" : false,
           "type" : "string"
         } ],
@@ -169,7 +163,7 @@
         } ],
         "responses" : {
           "400" : {
-            "description" : "Invalid pet value"
+            "description" : "Invalid vocabulary id"
           }
         },
         "x-accepts" : "application/json"
